--- a/App-debug-apikey.html
+++ b/App-debug-apikey.html
@@ -12,8 +12,8 @@
         Rally.onReady(function() {
             Rally.loadScripts(["src/javascript/utils/__ts-info-link.js","src/javascript/utils/__ts-logger.js","src/javascript/utils/ancestor-filter-panel.js","src/javascript/utils/ancestor-template-column.js","src/javascript/utils/file-utilities.js","src/javascript/utils/filter-panel.js","src/javascript/utils/overrides.js","src/javascript/app.js"],
 	            function() {
-	                Rally.launchApp('user-story-ancestor-grid', {
-	                    name: 'User Story Ancestor Grid'
+	                Rally.launchApp('feature-ancestor-grid', {
+	                    name: 'Feature Ancestor Grid'
 	                })
 	            }, true);
         });
